# BA-MPD

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
artifacts/: README.md  checksums.sha256
artifacts/reports/: teacher_accuracy_report.json
artifacts/teacher_checkpoints/beans_cbi/: beans_train_10_cnn14_best.pt  beans_train_25_cnn14_best.pt  beans_train_50_cnn14_best.pt
artifacts/teacher_checkpoints/tau/: tau_train_10_passt_best.pt  tau_train_25_passt_best.pt  tau_train_5_passt_best.pt
artifacts/teacher_logits/beans_cbi/: train_10_logits.index.json  train_10_logits.npy  train_25_logits.index.json  train_25_logits.npy  train_50_logits.index.json  train_50_logits.npy
artifacts/teacher_logits/tau/: train_10_logits.index.json  train_10_logits.npy  train_25_logits.index.json  train_25_logits.npy  train_5_logits.index.json  train_5_logits.npy
ba_mpd/: __init__.py  metrics.py  train_bampd_beans.py
ba_mpd/datasets/: __init__.py  beans_cbi.py
ba_mpd/losses/: __init__.py  distillation.py
ba_mpd/models/: __init__.py  cnn14.py
configs/main/: beans_cbi_10.yaml  beans_cbi_25.yaml  beans_cbi_50.yaml  tau_10.yaml  tau_25.yaml  tau_5.yaml
scripts/: run_beans_cbi.sh  run_tau.sh
splits/beans_cbi/: README.md  label_mapping.csv  test.csv  train_10.csv  train_25.csv  train_50.csv  valid.csv
splits/tau/: README.md
